# clue

./: .gitignore  LICENSE  README.md  package.json
example/: main.cpp
examples/: alert.cpp  basic.cpp  request.cpp  share.cpp  sound.cpp
examples/android/: AndroidManifest.xml  CMakeLists.txt  build.gradle
examples/android/cmake/: clue_srcs.txt
examples/android/res/values/: strings.xml
examples/data/: sound.snd
examples/ios/: Podfile
examples/ios/clue.xcodeproj/: project.pbxproj
examples/ios/clue.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
examples/ios/clue.xcodeproj/xcuserdata/agop.xcuserdatad/xcschemes/: testgame.xcscheme  xcschememanagement.plist
examples/ios/clue.xcworkspace/: contents.xcworkspacedata
examples/ios/clue.xcworkspace/xcshareddata/: clue.xcscmblueprint
h/clue/: clue.h  file.h  gles.h  hooks.h  internal.h  log.h  request.h  screen.h  touch.h
plugins/clue/: alert.h  clue.h  exec.h  gles.h  hook.c  hook.h  log.h  platform.h  request.c  request.h  screen.h  share.h  sound.h  touch.h  version.h
plugins/clue/android/: clue.c  file.c  gl_code.cpp  log.c
plugins/clue/android/com/agopshi/clue/: ClueActivity.java  ClueLib.java  ClueView.java  GL2JNIActivity.java  GL2JNILib.java  GL2JNIView.java
plugins/clue/ios/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  alert.m  exec.m  file.m  log.m  main.m  platform.m  request.m  screen.m  share.m  sound.m  version.m
scripts/android/: cmake_generate_sources.sh
src/: hook.c  request.c
tools/: amalgamate.js
